# miraeswarm

./: README.md
ESP32C6/src/: main.c
GlobalRTS/: .gitignore  CONFIG.template.js  Cargo.toml  GlobalUI.html  PHILOSOPHY.md  README.md  package-lock.json  package.json  rust-toolchain.toml.toml  server.js  simulator.js
GlobalRTS/client/: README.md  device.py  device_token.txt
GlobalRTS/public/: globalui.html
GlobalRTS/src/: http.rs  main.rs  protocol.rs  simulator.rs  state.rs  telemetry.rs  websocket.rs
